# plugin-crewai

./: README.md  pyproject.toml
src/crewai_axon/: __init__.py  toolkit.py  tools.py
