[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crewai-axon"
version = "0.1.0"
description = "CrewAI toolkit for Axon — treasury and payment infrastructure for autonomous AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Axon", email = "axonhq@proton.me" }]
keywords = ["crewai", "axon", "ai-agents", "payments", "eip-712", "vault", "web3"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "axonfi>=0.12.0",
    "crewai>=0.80.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.urls]
Homepage = "https://axonfi.xyz"
Documentation = "https://axonfi.xyz/docs"
Repository = "https://github.com/axonfi/crewai-plugin"
Issues = "https://github.com/axonfi/crewai-plugin/issues"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.ruff.format]
quote-style = "double"
